Changes for 2.1.7

New features:

Bug fixes:
........S. [ZBX-6904] now ESC.HISTORY macro creates the same message content whithin the same escalation step when notification is sent to multiple recipients (igors)
--------------------------------------------------------------------------------
Changes for 2.1.6

New features:
..F....... [ZBX-2616] upgraded the bundled DejaVu font from 2.33 to 2.34 (Richlv)
..F....... [ZBXNEXT-1763] added host related information under Monitoring (Oleg)
..F....... [ZBX-6983] changed the "Status of host group triggers" and "Status of host triggers" screen elements and the "Latest 20 issues" to display triggers without events (Pavels)
..F....... [ZBX-6983] renamed the "Status of host group triggers" screen element to "Latest host group issues" and "Status of host triggers" to "Latest host issues" (Pavels)

Bug fixes:
..F....... [ZBX-7022] fixed errors in Monitoring > Screens page when screen item has group and host dropdowns (Ivo)
..F....... [ZBX-6978] fixed leading and trailing spaces for translatable strings (Ivo)
..F....... [ZBX-7033] replaced HTML special characters with corresponding entity names and unicode characters (Ivo)
........S. [ZBX-7013] strndup function was replaced to avoid compilation error when non-gnu compilers are used (igors)
........S. [ZBX-6904] now ESC.HISTORY macro creates the same message content whithin the same escalation step when notification is sent to multiple recipients (igors)
........S. [ZBX-6987] fixed possible crash in value cache when freeing items with out of order values (wiper)
..F....... [ZBX-7024] fixed filtering by application name "0" in Monitoring > Overview dropdown (Ivo)
A.F....... [ZBX-7026] removed automatic changing of "error" field when trigger and trigger prototype expression is changed (Ivo)
..F....... [ZBX-7027] improved request of proxies in Configuration > Hosts list and request of hosts in Administration > DM > Proxies (Ivo)