@@ -3,7 +3,9 @@ Changes for 2.1.7
 New features:
 
 Bug fixes:
+..F....... [ZBX-7032] fixed possibility to add "ICMP ping" check in Configuration > Discovery (Ivo)
 ........S. [ZBX-6904] now ESC.HISTORY macro creates the same message content whithin the same escalation step when notification is sent to multiple recipients (igors)
+
 --------------------------------------------------------------------------------
 Changes for 2.1.6
 
